# pykrx_sga

./: README.md  SGA 경쟁사 실적 상세현황(직전분기 대비) 크롤링.ipynb  SGA 경쟁사 실적 상세현황(직전분기 대비) 크롤링.ipynb의 사본  SGA업계 및 경쟁사 현황4.xlsx  SGA업계 및 경쟁사 현황4_.xlsx  Weekly_Report_Full_01_15.xlsx  Weekly_Report_Full_01_15_sga.xlsx  company_dic.pkl  pykrx_찐막.ipynb  pyproject.toml  sorted_filtered_df.csv  test_poetry.py  경쟁사 실적현황표(SGA.SOL)_24.3Q_V1.xlsx  업계현황.ipynb  주간_동향_SGA.ipynb  주간_동향_SGASOL.ipynb
네이버주식_크롤링_일별/: SGA 경쟁사 실적 상세현황(직전분기 대비) 크롤링.ipynb  pykrx.ipynb  네이버주식_크롤링_ppp.ipynb  네이버주식_크롤링_일별_final.ipynb  네이버주식_크롤링_일별_찐WLS막.ipynb  네이버주식_크롤링_일별_찐WLS찐막.ipynb  네이버주식_크롤링_일별_찐막.ipynb  업계_동향.ipynb  업계_동향.ipynb의 사본  주간_동향_크롤링.ipynb
