[project]
name = "pykrx-sga"
version = "0.1.0"
description = ""
authors = [
    {name = "aswm0121"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "newspaper3k (>=0.2.8,<0.3.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
